css: section gif column alignment fix

--- a/sass/sections/_gif.sass
+++ b/sass/sections/_gif.sass
@@ -1,6 +1,7 @@
 .gif
     .row
         gap: 30px
+        align-items: center
 
     .column
         &_text
